# yappy

./: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
app/: layout.js  page.jsx
app/settings/: page.jsx
app/tasks/: page.jsx
src/: App.jsx  Settings.jsx  Tasks.jsx  index.jsx  layout.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dbus.rs  firebase.rs  handling.rs  lib.rs  main.rs  notification.rs  state.rs  store.rs  todoist.rs  utils.rs
src/components/: ApiKeyForm.jsx  FormField.jsx
