[package]
name = "yappy"
version = "0.1.0"
description = "Yet another pomodoro app..........."
authors = ["Dima Lipin"]
license = "MIT"
repository = ""
default-run = "yappy"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = ["system-tray"] }
async-std = { version = "1.12.0" }
futures = "0.3.25"
anyhow = "1.0.65"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
zbus = "3.14.1"
notify-rust = "4"
surf = "2.3.2"
firebase-rs = "2.0.8"
tokio = { version = "1.29.1", features = ["full"] }
chrono = "0.4.23"
rand = "0.8.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
